just added images.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
         <main class="row mb-5">
             <div class="col-md-6 order-md-2">
                 <h1>Image response</h1>
-                <img src="images/desktop.jpg" alt="Image" class="img-fluid rounded">
+                <img src="images/desktop.jpg" alt="Image1" class="img-fluid rounded">
+                <img src="images/creepy.jpg" alt="Image2" class="img-fluid rounded">
+                <img src="images/I'mpouting.jpg" alt="Image3" class="img-fluid rounded">
+                <img src="images/over9000like.jpg" alt="Image4" class="img-fluid rounded">
             </div>
 
             <div class="col-md-6 order-md-1">
